examples/bad/06-DuplicateDefNames.tms
int x = 0;

void x(int y) {
  return;
}

void main () {
  return;
}